--- a/CardGames/CardGames/CardGames_UCs/GameModesUC/PokerUC.xaml
+++ b/CardGames/CardGames/CardGames_UCs/GameModesUC/PokerUC.xaml
@@ -7,6 +7,26 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/racetrackpokertable2.png" Height="269" Margin="135,100,0,0" VerticalAlignment="Top" Width="528"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/gray_back.png" Height="82" Margin="267,191,0,0" VerticalAlignment="Top" Width="54"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/gray_back.png" Height="82" Margin="321,191,0,0" VerticalAlignment="Top" Width="54"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/gray_back.png" Height="82" Margin="375,191,0,0" VerticalAlignment="Top" Width="54"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/gray_back.png" Height="82" Margin="429,191,0,0" VerticalAlignment="Top" Width="54"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/gray_back.png" Height="82" Margin="483,191,0,0" VerticalAlignment="Top" Width="54"/>
+
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/9S.png" Height="82" Margin="113,42,0,0" VerticalAlignment="Top" Width="55"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/5D.png" Height="82" Margin="156,42,0,0" VerticalAlignment="Top" Width="55" RenderTransformOrigin="1.21,-0.856"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/QS.png" Height="82" Margin="113,342,0,0" VerticalAlignment="Top" Width="55"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/QD.png" Height="82" Margin="156,342,0,0" VerticalAlignment="Top" Width="55" RenderTransformOrigin="1.21,-0.856"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/10H.png" Height="82" Margin="353,363,0,0" VerticalAlignment="Top" Width="55"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/9H.png" Height="82" Margin="396,363,0,0" VerticalAlignment="Top" Width="55" RenderTransformOrigin="1.21,-0.856"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/KC.png" Height="82" Margin="588,342,0,0" VerticalAlignment="Top" Width="55"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/JD.png" Height="82" Margin="631,342,0,0" VerticalAlignment="Top" Width="55" RenderTransformOrigin="1.21,-0.856"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/AH.png" Height="82" Margin="588,42,0,0" VerticalAlignment="Top" Width="55"/>
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/6D.png" Height="82" Margin="631,42,0,0" VerticalAlignment="Top" Width="55" RenderTransformOrigin="1.21,-0.856"/>
+        <Label Content="DEALER" HorizontalAlignment="Left" FontSize="28" FontFamily="/CardGames;component/Resources/roland-huse-design_poker-in-october-demo/#Poker In October Demo" Margin="331,60,0,0" VerticalAlignment="Top" Width="147"/>
+
+
+
     </Grid>
 </UserControl>
