--- a/CardGames/CardGames/CardGames_UCs/GameModesUC/GoFishUC.xaml
+++ b/CardGames/CardGames/CardGames_UCs/GameModesUC/GoFishUC.xaml
@@ -7,6 +7,6 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/Placeholders/ComingSoonPlaceholder.PNG" Height="437" Margin="109,10,0,0" VerticalAlignment="Top" Width="589"/>
     </Grid>
 </UserControl>
