--- a/CardGames/CardGames/CardGames_UCs/GameModesUC/BlackjackUC.xaml
+++ b/CardGames/CardGames/CardGames_UCs/GameModesUC/BlackjackUC.xaml
@@ -7,6 +7,21 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/racetrackpokertable2.png" Height="269" Margin="135,100,0,0" VerticalAlignment="Top" Width="528"/>
+        <Label Content="DEALER" HorizontalAlignment="Left" FontSize="28" FontFamily="/CardGames;component/Resources/roland-huse-design_poker-in-october-demo/#Poker In October Demo" Margin="331,60,0,0" VerticalAlignment="Top" Width="147"/>
+        
+        <StackPanel Name="DealerHand" HorizontalAlignment="Left" Height="82" Margin="345,133,0,0" VerticalAlignment="Top" Width="150"/>
+        
+        <StackPanel Name="Player1Hand" HorizontalAlignment="Left" Height="54" Margin="364,315,0,0" VerticalAlignment="Top" Width="100"/>
+
+        <StackPanel Name="Player2Hand" HorizontalAlignment="Left" Height="54" Margin="255,315,0,0" VerticalAlignment="Top" Width="100"/>
+
+        <StackPanel Name="Player3Hand" HorizontalAlignment="Left" Height="54" Margin="480,315,0,0" VerticalAlignment="Top" Width="100"/>
+
+        <StackPanel Name="Player4Hand" HorizontalAlignment="Left" Height="54" Margin="593,278,0,0" VerticalAlignment="Top" Width="100"/>
+
+        <StackPanel Name="Player5Hand" HorizontalAlignment="Left"  Height="54" Margin="135,278,0,0" VerticalAlignment="Top" Width="100"/>
+        
+
     </Grid>
 </UserControl>
