--- a/CardGames/CardGames/CardGames_UCs/GameModesUC/BlackjackUC.xaml
+++ b/CardGames/CardGames/CardGames_UCs/GameModesUC/BlackjackUC.xaml
@@ -6,21 +6,41 @@
              xmlns:local="clr-namespace:CardGames.CardGames_UCs.GameModesUC"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
     <Grid>
         <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/racetrackpokertable2.png" Height="269" Margin="135,100,0,0" VerticalAlignment="Top" Width="528"/>
         <Label Content="DEALER" HorizontalAlignment="Left" FontSize="28" FontFamily="/CardGames;component/Resources/roland-huse-design_poker-in-october-demo/#Poker In October Demo" Margin="331,60,0,0" VerticalAlignment="Top" Width="147"/>
-        
+
         <StackPanel Name="DealerHand" HorizontalAlignment="Left" Height="82" Margin="345,133,0,0" VerticalAlignment="Top" Width="150"/>
-        
+
+        <Label Name="Player1Bank" Content="$0" HorizontalAlignment="Left" Width="68" Margin="364,289,0,0" VerticalAlignment="Top" />
+        <Label Name="Player1Name" Content="Player1" HorizontalAlignment="Left" Width="68" Margin="364,263,0,0" VerticalAlignment="Top" />
         <StackPanel Name="Player1Hand" HorizontalAlignment="Left" Height="54" Margin="364,315,0,0" VerticalAlignment="Top" Width="100"/>
 
         <StackPanel Name="Player2Hand" HorizontalAlignment="Left" Height="54" Margin="255,315,0,0" VerticalAlignment="Top" Width="100"/>
+        <Label Name="Player2Name" Content="Player2" HorizontalAlignment="Left" Width="68" Margin="255,263,0,0" VerticalAlignment="Top" />
+        <Label Name="Player2Bank" Content="$0" HorizontalAlignment="Left" Width="68" Margin="255,289,0,0" VerticalAlignment="Top" />
+
 
         <StackPanel Name="Player3Hand" HorizontalAlignment="Left" Height="54" Margin="480,315,0,0" VerticalAlignment="Top" Width="100"/>
+        <Label Name="Player3Name" Content="Player3" HorizontalAlignment="Left" Width="68" Margin="480,263,0,0" VerticalAlignment="Top" />
+        <Label Name="Player3Bank" Content="$0" HorizontalAlignment="Left" Width="68" Margin="480,289,0,0" VerticalAlignment="Top" />
+
 
         <StackPanel Name="Player4Hand" HorizontalAlignment="Left" Height="54" Margin="593,278,0,0" VerticalAlignment="Top" Width="100"/>
+        <Label Name="Player4Name" Content="Player4" HorizontalAlignment="Left" Width="68" Margin="576,221,0,0" VerticalAlignment="Top" />
+        <Label Name="Player4Bank" Content="$0" HorizontalAlignment="Left" Width="68" Margin="576,252,0,0" VerticalAlignment="Top" />
+
 
         <StackPanel Name="Player5Hand" HorizontalAlignment="Left"  Height="54" Margin="135,278,0,0" VerticalAlignment="Top" Width="100"/>
+        <Label Name="Player5Name" Content="Player5" HorizontalAlignment="Left" Width="68" Margin="167,221,0,0" VerticalAlignment="Top" />
+        <Label Name="Player5Bank" Content="$0" HorizontalAlignment="Left" Width="68" Margin="167,252,0,0" VerticalAlignment="Top" />
+
+
+        <Label Name="TurnLabel" Content="Turn:" HorizontalAlignment="Left" Margin="255,159,0,0" VerticalAlignment="Top" Width="68" Height="25"/>
+        
+        <Label Name="BetLabel" Content="Bet: $1" HorizontalAlignment="Left" Margin="255,184,0,0" VerticalAlignment="Top" Width="68"/>
+
         
 
     </Grid>
