--- a/CardGames/CardGames/CardGames_UCs/GameModesUC/BlackjackUC.xaml
+++ b/CardGames/CardGames/CardGames_UCs/GameModesUC/BlackjackUC.xaml
@@ -42,12 +42,10 @@
 
         <Label Name="BetLabel" Content="Bet: $1" HorizontalAlignment="Left" Margin="255,184,0,0" VerticalAlignment="Top" Width="68"/>
 
-        <Button Name="HitButton" Content="Hit" HorizontalAlignment="Left" Margin="167,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="#FF8C8C8C" Foreground="Black"/>
-        <Button Name="FoldButton" Content="Fold" HorizontalAlignment="Left" Margin="240,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="#FF8C8C8C" Foreground="Black"/>
-        <Button Name="StandButton" Content="Stand" HorizontalAlignment="Left" Margin="313,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="#FF8C8C8C" Foreground="Black"/>
-        <Button Name="SplitButton" Content="Split" HorizontalAlignment="Left" Margin="386,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="#FF8C8C8C" Foreground="Black"/>
-
-
+        <Button Name="HitButton" Content="Hit" HorizontalAlignment="Left" Margin="167,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="White" Foreground="Black"/>
+        <Button Name="DoubleDownButton" Content="Double Down" HorizontalAlignment="Left" Margin="313,369,0,0" VerticalAlignment="Top" Width="93" Height="34" IsEnabled="False" Background="White" Foreground="Black"/>
+        <Button Name="StandButton" Content="Stand" HorizontalAlignment="Left" Margin="240,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="White" Foreground="Black"/>
+        <Button Name="SplitButton" Content="Split" HorizontalAlignment="Left" Margin="412,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="White" Foreground="Black"/>
 
     </Grid>
 </UserControl>
