--- a/CardGames/CardGames/CardGames_UCs/GameModesUC/BlackjackUC.xaml
+++ b/CardGames/CardGames/CardGames_UCs/GameModesUC/BlackjackUC.xaml
@@ -38,14 +38,12 @@
         <Label Name="Player5Bank" Content="$0" HorizontalAlignment="Left" Width="68" Margin="564,237,0,0" VerticalAlignment="Top" />
 
 
-        <Label Name="TurnLabel" Content="Turn:" HorizontalAlignment="Left" Margin="255,159,0,0" VerticalAlignment="Top" Width="68" Height="25"/>
+        <Label Name="TurnLabel" Content="Turn:" HorizontalAlignment="Left" Margin="255,159,0,0" VerticalAlignment="Top" Width="143" Height="25"/>
 
-        <Label Name="BetLabel" Content="Bet: $1" HorizontalAlignment="Left" Margin="255,184,0,0" VerticalAlignment="Top" Width="68"/>
-
-        <Button Name="HitButton" Content="Hit" HorizontalAlignment="Left" Margin="167,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="White" Foreground="Black" Visibility="Hidden"/>
-        <Button Name="DoubleDownButton" Content="Double Down" HorizontalAlignment="Left" Margin="313,369,0,0" VerticalAlignment="Top" Width="93" Height="34" IsEnabled="False" Background="White" Foreground="Black" Visibility="Hidden"/>
+        <Button Name="HitButton" Content="Hit" HorizontalAlignment="Left" Margin="167,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="White" Foreground="Black" Visibility="Hidden" Click="HitButton_Click"/>
+        <Button Name="DoubleDownButton" Content="Double Down" HorizontalAlignment="Left" Margin="313,369,0,0" VerticalAlignment="Top" Width="93" Height="34" IsEnabled="False" Background="White" Foreground="Black" Visibility="Hidden" Click="DoubleDownButton_Click"/>
         <Button Name="StandButton" Content="Stand" HorizontalAlignment="Left" Margin="240,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="White" Foreground="Black" Visibility="Hidden" Click="StandButton_Click"/>
-        <Button Name="SplitButton" Content="Split" HorizontalAlignment="Left" Margin="412,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="White" Foreground="Black" Visibility="Hidden"/>
+        <Button Name="SplitButton" Content="Split" HorizontalAlignment="Left" Margin="412,369,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="False" Background="White" Foreground="Black" Visibility="Hidden" Click="SplitButton_Click"/>
         <Button x:Name="D1Button" Content="$1" HorizontalAlignment="Left" Margin="693,133,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="True" Background="White" Foreground="Black" Click="BetButton_Click"/>
         <Button x:Name="D5Button" Content="$5" HorizontalAlignment="Left" Margin="693,188,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="True" Background="White" Foreground="Black" Click="BetButton_Click"/>
         <Button x:Name="D10Button" Content="$10" HorizontalAlignment="Left" Margin="693,241,0,0" VerticalAlignment="Top" Width="68" Height="34" IsEnabled="True" Background="White" Foreground="Black" Click="BetButton_Click"/>
