--- a/CardGames/CardGames/CardGames_UCs/GameModesUC/PokerUC.xaml
+++ b/CardGames/CardGames/CardGames_UCs/GameModesUC/PokerUC.xaml
@@ -6,7 +6,7 @@
              xmlns:local="clr-namespace:CardGames.CardGames_UCs.GameModesUC"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <Grid x:Name="PokerGrid">
         <Image HorizontalAlignment="Left" Source="/CardGames;component/Resources/racetrackpokertable2.png" Height="304" Margin="101,55,0,0" VerticalAlignment="Top" Width="597"/>
         <Image Name="com1" HorizontalAlignment="Left" Source="/CardGames;component/Resources/gray_back.png" Height="93" Margin="250,158,0,0" VerticalAlignment="Top" Width="61"/>
         <Image Name="com2" HorizontalAlignment="Left" Source="/CardGames;component/Resources/gray_back.png" Height="93" Margin="311,158,0,0" VerticalAlignment="Top" Width="61"/>
@@ -15,7 +15,7 @@
         <Image Name="com5" HorizontalAlignment="Left" Source="/CardGames;component/Resources/gray_back.png" Height="93" Margin="494,158,0,0" VerticalAlignment="Top" Width="61"/>
         <Image Name="ph1" HorizontalAlignment="Left" Source="/CardGames;component/Resources/gray_back.png" Height="93" Margin="340,357,0,0" VerticalAlignment="Top" Width="62"/>
         <Image Name="ph2" HorizontalAlignment="Left" Source="/CardGames;component/Resources/gray_back.png" Height="93" Margin="402,357,0,0" VerticalAlignment="Top" Width="62" RenderTransformOrigin="1.21,-0.856"/>
-        <Label Content="DEALER" HorizontalAlignment="Left" FontSize="33" FontFamily="/CardGames;component/Resources/roland-huse-design_poker-in-october-demo/#Poker In October Demo" Margin="322,10,0,0" VerticalAlignment="Top" Width="167" Height="49"/>
+        <TextBox x:Name="txtBoxStatus" TextAlignment="Center" IsEnabled="False" Background="DarkSlateGray" HorizontalAlignment="Left" FontSize="25" FontFamily="/CardGames;component/Resources/roland-huse-design_poker-in-october-demo/#Poker In October Demo" Margin="60,10,0,0" VerticalAlignment="Top" Width="687" Height="49"/>
         <Button Name="btnBet" FontSize="24" FontFamily="SimSun" Background="#4c7f7f" Content="Bet" HorizontalAlignment="Left" Margin="516,362,0,0" VerticalAlignment="Top" Width="113" Height="34" Click="Bet_Click"/>
         <Button x:Name="btnCall" FontSize="24" FontFamily="SimSun" Background="#4c7f7f" Content="Call" HorizontalAlignment="Left" Margin="634,362,0,0" VerticalAlignment="Top" Width="113" Height="34" Click="Call_Click"/>
         <Button x:Name="btnRaise" FontSize="24" FontFamily="SimSun" Background="#4c7f7f" Content="Raise" HorizontalAlignment="Left" Margin="516,402,0,0" VerticalAlignment="Top" Width="113" Height="34" Click="Raise_Click"/>
